// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SToast.vue can have a clickable action 1`] = `
<div class="toast" style="" name="fade">
  <!---->
  <!----> <button class="toast__action">
    OK
  </button></div>
`;

exports[`SToast.vue can have action text configured 1`] = `
<div class="toast" style="" name="fade">
  <!---->
  <!----> <button class="toast__action">
    action text
  </button></div>
`;

exports[`SToast.vue can have position  1`] = `
<div class="toast" style="" name="fade">
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`SToast.vue can have position center 1`] = `
<div class="toast toast--center" style="" name="fade">
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`SToast.vue can have position right 1`] = `
<div class="toast toast--right" style="" name="fade">
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`SToast.vue can have the icon hidden 1`] = `
<div class="toast" style="" name="fade">
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`SToast.vue closes on action click 1`] = `
<div class="toast" style="display: none;" name="fade">
  <!---->
  <!----> <button class="toast__action">
    OK
  </button></div>
`;

exports[`SToast.vue renders toast type  correctly 1`] = `
<div class="toast" style="" name="fade">
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`SToast.vue renders toast type error correctly 1`] = `
<div class="toast toast--error" style="" name="fade">
  <div class="toast__icon">
    <sicon-stub icon="alert-circle" color="red" size=""></sicon-stub>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`SToast.vue renders toast type success correctly 1`] = `
<div class="toast toast--success" style="" name="fade">
  <div class="toast__icon">
    <sicon-stub icon="check-circle" color="green" size=""></sicon-stub>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`SToast.vue renders toast type warning correctly 1`] = `
<div class="toast toast--warning" style="" name="fade">
  <div class="toast__icon">
    <sicon-stub icon="alert-triangle" color="gold" size=""></sicon-stub>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`SToast.vue requires a title or body 1`] = `
<div class="toast" style="" name="fade">
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`SToast.vue requires a title or body 2`] = `
<div class="toast" style="" name="fade">
  <!---->
  <!---->
  <!---->
</div>
`;
